# mzgl-livecode

./: .clang-format  .gitignore  CMakeLists.txt  install.sh
src/: LiveCodeApp.cpp  LiveCodeApp.h  main.cpp  myApp.cpp  myApp.h
